# gauss

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: main.rs  plugin.rs
src/plugins/: currency.rs  h.rs  lastfm.rs  mod.rs  seen.rs  tangorin.rs  url.rs
