[package]
name    = "gauss"
version = "0.3.0"

repository = "https://github.com/RoxasShadow/gauss"
authors    = ["Giovanni Capuano <webmaster@giovannicapuano.net>"]
license    = "WTFPL"

description = "Sono bello."
keywords    = ["bot", "irc"]

[dependencies]
irc = "0.11"

regex       = "0.1"
lazy_static = "0.2"
time        = "0.1"
kuchiki     = { version = "0.3", features = ["hyper"] }
rustfm      = "0.1"
hyper       = "0.9"

serde_derive = { version = "0.8.0", optional = true }
